Refactor and correctly implemented